--- a/Feedback.UI/src/app/feedback-page/feedback-page-form/feedback-page-form.component.html
+++ b/Feedback.UI/src/app/feedback-page/feedback-page-form/feedback-page-form.component.html
@@ -33,10 +33,8 @@
       <div class="input-group-prepend">
         <div class="input-group-text"><i class="fa fa-envelope icon"></i></div>
       </div>
-      <input type="email" class="form-control" name="Email" placeholder="Email"
-      #Email="ngModel" 
-      [(ngModel)]="service.formData.Email"
-      required email></div>
+      <input type="email" class="form-control" name="Email" placeholder="Email" #Email="ngModel" 
+      [(ngModel)]="service.formData.Email" required email></div>
       
       <div *ngIf="Email.invalid && (Email.dirty || Email.touched)" class="alert alert-danger">
         <div *ngIf="Email.errors?.['required']">
@@ -73,19 +71,19 @@
   </div>
   
   <div class="col-auto my-1" style="display: flex !important; height: 30px !important;">
-    <label class="mr-sm-2" style="padding: 6px 1px 25px;" for="inlineFormCustomSelect">Тема:</label>
-    <select name="TopicID" 
+    <label class="mr-sm-2" style="padding: 6px 1px 25px; margin-left: -11px;" for="inlineFormCustomSelect">Тема:</label>
+    <select name="TopicID"
     [(ngModel)]="service.topicData" 
     required
     class="custom-select mr-sm-2" id="inlineFormCustomSelect" style="width: 82%;margin-left: auto;"> 
-      <option *ngFor="let topic of topicList | async" [ngValue]="topic">
+      <option *ngFor="let topic of topicList | async" [ngValue]="topic" [selected]="topic">
         {{topic.topicName}}
       </option>
     </select>
   </div>
 
-  <div data-mdb-input-init class="form-outline" style="    justify-content: space-between;margin-top: 15px; display:flex; flex-direction: row;">
-    <label class="form-label" style="padding: 6px 1px 25px; width: 40px;" for="textAreaExample">Ваше сообщение:</label>
+  <div data-mdb-input-init class="form-outline" style="justify-content: space-between; margin-top: 15px; display:flex; flex-direction: row;">
+    <label class="form-label" style="padding: 6px 1px 25px; width: 40px; margin-left: -11px;" for="textAreaExample">Ваше сообщение:</label>
     <div data-mdb-input-init class="form-outline" style="margin-top: 15px; display:flex; flex-direction: column;">
       <textarea style="width: 390px;" class="form-control" id="textAreaExample1" name="Message" rows="4"
       name="Сообщение" #Message="ngModel" 
@@ -102,21 +100,21 @@
   </div>
 
   <div class="form-group row" style="padding-top: 20px; display: flex; flex-direction: row; width: 500px;">
-    <label for="inputPassword3" class="col-sm-2 col-form-label">Цифры:</label>
-    <div class="col-sm-10" style="display: flex; flex-direction: row; align-items: center;">
+    <label for="inputPassword3" class="col-sm-2 col-form-label" style="margin-left: -11px;">Цифры:</label>
+    <div class="col-sm-10" style="display: flex; flex-direction: row; align-items: center; margin-left: 11px;">
       <input type="text" [(ngModel)]="userInput" name="captchaInput"  class="form-control" style="width: 200px;"
       required>
       <div class="captcha" style="display: flex; margin-left: 10px; user-select:none;">
         <div style="font-size: large; width: 80px;
-        height: 50px;
-        margin: 0 5px;
-        border: 2px solid orange;
-        color: orange;
-        border-radius: 5px;
-        font-size: 24px;
-        background-image: url(https://thumbs.dreamstime.com/b/orange-grid-white-lines-chess-pattern-bright-orange-white-cell-bright-geometric-pattern-background-135293991.jpg);
-        text-align: center;
-        line-height: 50px;">
+                    height: 50px;
+                    margin: 0 5px;
+                    border: 2px solid orange;
+                    color: orange;
+                    border-radius: 5px;
+                    font-size: 24px;
+                    background-image: url(https://thumbs.dreamstime.com/b/orange-grid-white-lines-chess-pattern-bright-orange-white-cell-bright-geometric-pattern-background-135293991.jpg);
+                    text-align: center;
+                    line-height: 50px;">
           {{ captchaText }}
         </div>
       </div>
